...
data class BarItem(val title: String, val image: ImageVector, val route: String)

object NavBarItems {
    val BarItems =
        listOf(
            BarItem(
                title = "Home",
                image = Icons.Filled.Home,
                route = NavRoutes.Home.route
            ),
            BarItem(
                title = "Contacts",
                image = Icons.Filled.Face,
                route = NavRoutes.Contacts.route
            ),
            BarItem(
                title = "Favorites",
                image = Icons.Filled.Favorite,
                route = NavRoutes.Favorites.route
            )
        )
}

...
