<resources>
    <string name="app_name">ModernApp001</string>
    <string name="open_activity">Open Activity</string>
    <string name="open_webview_activity">Open WebView Activity</string>
    <string name="java8_desugar_test">Test Java8 desugar</string>
    <string name="heads_up_notification">Heads-up notification</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_activity_webview">WebView Activity</string>"
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="app_widget_description">Hello World widget</string>
</resources>
